# daten

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
daten/: __main__.py  bootstrap.py  cli.py  doctor.py  prompts.py  scaffold_notebook.py  scaffold_production.py  uv_runner.py
docs/: RELEASING.md
homebrew-tap/: README.md
homebrew-tap/Formula/: daten.rb
scripts/: render_homebrew_formula.py
tests/: test_bootstrap.py  test_cli_integration.py  test_prompts.py  test_scaffolds.py  test_uv_runner.py
