[project]
name = "daten"
version = "0.1.1"
description = "Scaffold data science and ML projects with uv."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["cli", "data-science", "machine-learning", "scaffolding", "uv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "questionary>=2.1.0",
    "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/henriquepmartins/daten"
Repository = "https://github.com/henriquepmartins/daten"
Issues = "https://github.com/henriquepmartins/daten/issues"

[project.scripts]
daten = "daten.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["daten"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
